--- a/Maybenogi/Client/_Imports.razor
+++ b/Maybenogi/Client/_Imports.razor
@@ -10,3 +10,5 @@
 @using Maybenogi.Client.Shared
 @using Maybenogi.Client.Services
 @using Maybenogi.Client.Models
+@using Microsoft.AspNetCore.Components
+@using Maybenogi.Shared.Model
